--- a/index.html
+++ b/index.html
@@ -3,8 +3,16 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>game</title>
+    <script type="text/javascript" src="jquery-2.1.4.js"></script>
+    <script type="text/javascript" src="sylvester.src.js"></script>
+    <script type="text/javascript" src="map.js"></script>
+    <script type="text/javascript" src="gameobject.js"></script>
+    <script type="text/javascript" src="ball.js"></script>
+    <script type="text/javascript" src="game.js"></script>
 </head>
 <body>
-
+<canvas id="gameField" width="800" height="640">
+    update browser
+</canvas>
 </body>
 </html>
